# LABWORK-6

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
controller/: controller.cpp  controller.hpp
model/: coloredObject.cpp  coloredObject.hpp  document.cpp  document.hpp  object.cpp  object.hpp
view/: view.cpp  view.hpp
